k8s/auth-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-depl
spec:
  selector:
    matchLabels:
      service: auth
  template:
    metadata:
      labels:
        service: auth
    spec:
      containers:
      - name: auth-service-pod
        image: kunalznk/e-com-auth
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4000
