k8s/database-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-depl
spec:
  selector:
    matchLabels:
      component: mysql
  replicas: 1
  template:
    metadata:
      labels:
        component: mysql
    spec:
      # volumes:
      #   - name: mysql-volume
      #     persistentVolumeClaim:
      #       claimName: mysql-persistent-volume
      containers:
        - name: mysql-pod
          image: mysql
          imagePullPolicy: IfNotPresent
          # resources:
          #   requests:
          #     memory: "64Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          # volumeMounts:
          #   - name: mysql-volume
          #     mountPath: /var/lib/mysql/
          #     subPath: mysql
          ports:
            - containerPort: 3306
