k8s/order-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-depl
spec:
  selector:
    matchLabels:
      service: order
  template:
    metadata:
      labels:
        service: order
    spec:
      containers:
      - name: order-service-pod
        image: kunalznk/microservice:order
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
