k8s/payment-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-depl
spec:
  selector:
    matchLabels:
      service: payment
  template:
    metadata:
      labels:
        service: payment
    spec:
      containers:
      - name: payment-service-pod
        image: kunalznk/microservice:payment
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
