k8s/product-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-depl
spec:
  selector:
    matchLabels:
      service: product
  template:
    metadata:
      labels:
        service: product
    spec:
      containers:
      - name: product-service-pod
        image: kunalznk/microservice:product
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
