k8s/user-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-depl
spec:
  selector:
    matchLabels:
      service: user
  template:
    metadata:
      labels:
        service: user
    spec:
      containers:
      - name: user-service-pod
        image: kunalznk/microservice:user
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
