k8s/clusterip-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mysql
  ports:
  - port: 3306
    targetPort: 3306

---

apiVersion: v1
kind: Service
metadata:
  name: auth-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    service: auth
  ports:
    - port: 4000
      targetPort: 4000
